--- a/css/styles.css
+++ b/css/styles.css
@@ -36,17 +36,22 @@ button {cursor: pointer;}
 
 h1,h2,h3,h4,p {margin: 0 auto;}
 
+.picture {
+    display: block;
+    max-width: 100%;
+}
+
 /* SECTIONS-CONTAINER */
 .section {
     padding: 94px 0;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 .container {
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
-    background-color: aqua;
+    /* background-color: aqua; */
 }
 
 /* HEADER */
@@ -65,8 +70,6 @@ header {
     justify-content: space-between;
     padding-top: 24px;
     padding-bottom: 24px;
-    
-    
 }
 
 .main-nav, .nav-contact {
@@ -153,22 +156,47 @@ header {
 /* FEATURES */
 /* .title.features {visually-hidden} */
 .features {padding-bottom: 0;}
-.features-item {font-size: 14px;
+
+.features-list {display:flex;}
+
+.features-item {flex-basis: calc((100%-90px)/4);}
+
+.features-item + .features-item {margin-left: 30px;}
+
+.features-item-title {font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
     letter-spacing: 0.03em;}
+    
 .features-text {font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;}
 
+
+    /* CASES */
+.cases-list {display: flex;
+justify-content: space-between;}
+
+
 /* TEAM */
 .team {background-color: var(--background-team-section);}
+
+.team-list {display: flex;
+justify-content: space-between;}
+
+/* .team-card * {outline: 1px solid red;} */
+
 .team-card {background-color: var(--background-team-card);}
+
+.team-description {padding: 30px;}
+
 .team-name {font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    letter-spacing: 0.03em;}
+    letter-spacing: 0.03em;
+
+    margin-bottom: 10px;}
 .team-position {font-size: 16px;
     line-height: 1.19;
     text-align: center;
